force-app/main/default/objects/OrderItem/fields/WheelHub__c.field-meta.xml
<CustomField>
    <fullName>WheelHub__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wheel Hub</label>
    <referenceTo>WheelHub__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>