force-app/main/default/objects/OrderItem/fields/WheelProduct__c.field-meta.xml
<CustomField>
    <fullName>WheelProduct__c</fullName>
    <formula>Drawing__r.WheelProduct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wheel Product</label>
    <type>Text</type>
</CustomField>