force-app/main/default/objects/OrderItem/fields/WheelProductStandard__c.field-meta.xml
<CustomField>
    <fullName>WheelProductStandard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wheel Standard</label>
    <referenceTo>WheelProductStandard__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>