force-app/main/default/objects/OrderItem/fields/WheelSteelGrade__c.field-meta.xml
<CustomField>
    <fullName>WheelSteelGrade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wheel Steel Grade</label>
    <referenceTo>WheelSteelGrade__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>