force-app/main/default/objects/OrderItem/fields/YearMonth__c.field-meta.xml
<CustomField>
    <fullName>YearMonth__c</fullName>
    <label>Year/Month</label>
    <length>6</length>
    <type>Text</type>
</CustomField>